--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -33,6 +33,7 @@ services:
       eventbusPort: 5723
       hazelcastPort: 5701
       containerPort: 8022
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/camelbridge/actuator/health
     podconfig:
@@ -83,6 +84,7 @@ services:
       eventbusPort: 5724
       hazelcastPort: 5701
       containerPort: 8092
+      servicePort: 80
     ingressPath: /registrationprocessor/v1/packetclassifier/
     healthUrl: /registrationprocessor/v1/packetclassifier/actuator/health
 
@@ -108,6 +110,7 @@ services:
       eventbusPort: 5714
       hazelcastPort: 5701
       containerPort: 8087
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/uploader/actuator/health
 
@@ -118,6 +121,7 @@ services:
       eventbusPort: 5727
       hazelcastPort: 5701
       containerPort: 9072
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/qualitychecker/actuator/health
 
@@ -128,6 +132,7 @@ services:
       eventbusPort: 5715
       hazelcastPort: 5701
       containerPort: 8088
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/packetvalidator/actuator/health
 
@@ -138,6 +143,7 @@ services:
       eventbusPort: 5716
       hazelcastPort: 5701
       containerPort: 8089
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/osivalidator/actuator/health
 
@@ -148,6 +154,7 @@ services:
       eventbusPort: 5717
       hazelcastPort: 5701
       containerPort: 8091
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/demodedupe/actuator/health
 
@@ -158,6 +165,7 @@ services:
       eventbusPort: 5718
       hazelcastPort: 5701
       containerPort: 9096
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/biodedupe/actuator/health
 
@@ -168,6 +176,7 @@ services:
       eventbusPort: 5777
       hazelcastPort: 5701
       containerPort: 8020
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/bioauth/actuator/health
 
@@ -178,6 +187,7 @@ services:
       eventbusPort: 5726
       hazelcastPort: 5701
       containerPort: 9071
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/abishandler/actuator/health
 
@@ -188,6 +198,7 @@ services:
       eventbusPort: 5888
       hazelcastPort: 5701
       containerPort: 8091
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/abismiddleware/actuator/health
 
@@ -209,6 +220,7 @@ services:
       eventbusPort: 5736
       hazelcastPort: 5701
       containerPort: 8095
+      servicePort: 80
     ingressPath: ''
     healthUrl: /registrationprocessor/v1/external/actuator/health 
 
@@ -230,6 +242,7 @@ services:
       eventbusPort: 5719
       hazelcastPort: 5701
       containerPort: 8099
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/uin-generator/actuator/health
 
@@ -240,6 +253,7 @@ services:
       eventbusPort: 5721
       hazelcastPort: 5701
       containerPort: 8088
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/sender-stage/actuator/health
 
@@ -250,6 +264,7 @@ services:
       eventbusPort: 5722
       hazelcastPort: 5701
       containerPort: 8099
+      servicePort: 80
     ingressPath: '' 
     healthUrl: /registrationprocessor/v1/print-stage/actuator/health
 
